--- a/polish-version-calisia-web/artysci.html
+++ b/polish-version-calisia-web/artysci.html
@@ -94,16 +94,14 @@
             <div data-aos="zoom-in" data-aos-duration="1000" class="team-h">
                 <h1 class="h1-team">Artyści</h1>
             </div>
-            <div class="kafelek">
-                <a href="program.html">
-                    Program
-                </a>
-            </div>
-
-            <div class="kafelek">
-                <a href="o-festiwalu.html">
+            <div class="main-festiwal margin-bez">
+                <a href="o-festiwalu.html" class="card">
                     O festiwalu
                 </a>
+                <a href="program.html" class="card">
+                    Program
+                </a>
+
             </div>
         </section>
 
