--- a/polish-version-calisia-web/o-festiwalu.html
+++ b/polish-version-calisia-web/o-festiwalu.html
@@ -94,13 +94,11 @@
             <div data-aos="zoom-in" data-aos-duration="1000" class="team-h">
                 <h1 class="h1-team">O festiwalu</h1>
             </div>
-            <div class="kafelet">
-                <a href="program.html" class="kafelek">
+            <div class="main-festiwal margin-bez">
+                <a href="program.html" class="card">
                     Program
                 </a>
-            </div>
-            <div class="kafelek">
-                <a href="artysci.html" class="kafelek">
+                <a href="artysci.html" class="card">
                     Artyści
                 </a>
 
