--- a/polish-version-calisia-web/program.html
+++ b/polish-version-calisia-web/program.html
@@ -95,15 +95,14 @@
                 <h1 class="h1-team">Program</h1>
             </div>
 
-            <div class="kafelek">
-                <a href="o-festiwalu.html">
+            <div class="main-festiwal margin-bez">
+                <a href="o-festiwalu.html" class="card">
                     O festiwalu
                 </a>
-            </div>
-            <div class="kafelek">
-                <a href="artysci.html">
+                <a href="artysci.html" class="card">
                     Artyści
                 </a>
+
             </div>
         </section>
 
