--- a/rules.html
+++ b/rules.html
@@ -188,8 +188,8 @@
                         <a href="https://www.instagram.com/calisia_arts_foundation/" target="_blank"><i
                                 class="fa fa-instagram"></i></a>
                     </div>
-                    <p><span class="footer-s-1">&copy; 2022</span><span class="footer-span"> Calisia Arts
-                            Foundation</span></br><span class="footer-s-2">Natalia Byrdy Design</span></p>
+                    <p><span class="footer-s-1">&copy; 2024</span><span class="footer-span"> Calisia Arts
+                            Foundation</span></p>
                 </div>
             </div>
     </section>
