--- a/polish-version-calisia-web/o-konkursie.html
+++ b/polish-version-calisia-web/o-konkursie.html
@@ -94,28 +94,118 @@
         </header>
         <section class="contact">
             <div data-aos="zoom-in" data-aos-duration="1000" class="team-h">
-                <h1 class="h1-team">Konkurs</h1>
+                <h1 class="h1-team">Konkurs 2023</h1>
+            </div>
+            <div class="main-festiwal margin-bez">
+                <a href="o-konkursie.html" class="card card2">
+                    O konkursie 2023
+                 </a>
+                 <a href="foto.html" class="card card2">
+                     Fotorelacja
+                 </a>
+                 <a href="wyniki.html" class="card card2">
+                    Wyniki konkursu
+                 </a>
+                 <a href="jury.html" class="card card2">
+                     Jury
+                 </a>
+
             </div>
             <div class="container-text-photos">
-            </div>
+                <div class="text-container">
+                    <p class="text-application width-form">
+                        I Międzynarodowy Konkurs Pianistyczny im. Henryka Melcera ma na celu odkrywanie i
+                        promowanie utalentowanych pianistów z całego świata.
+                        Patronem konkursu jest związany z Kaliszem wybitny kompozytor i pianista Henryk Melcer, który
+                        po śmierci popadł w zapomnienie i nie jest obecnie znany szerszemu gronu melomanów.
+                        Laureaci konkursu wystąpią w salach koncertowych w Polsce i Austrii, a wybrani uczestnicy będą
+                        mieli szansę wzięcia udziału w kursach mistrzowskich organizowanych przez Fundację Calisia
+                        Arts, które zostaną poprowadzone przez uznanych pianistów i pedagogów.
+                        Oprócz występów na koncertach finałowych dla laureatów przewidziane są nagrody pieniężne.
+                    </p>
+                </div>
+                <div class="width-form border-competition">
 
-            <section class="main-festiwal">
-                <div class="kafel-main">
-                    <a href="konkurs24.html" class="card">
-                        Konkurs 2023
-                    </a>
                 </div>
 
+            </div>
+            <div class="container-photo">
+                <div data-aos="fade-right" data-aos-duration="1000" class="image-about-1">
+                    <img class="img-kalisz-1 img-kalisz-2" src="slider-images/lukasz prowadzi kursy.jpg"
+                        alt="city, kalisz, view" />
+                    <div class="label-photo">
+                        Kursy mistrzowskie w Kanadzie prowadzone przez przewodniczącego Jury Łukasza Byrdy
+                    </div>
+                </div>
+                <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
+                    <img class="img-kalisz-1 img-kalisz-2" src="slider-images/PSM Kalisz recital Lukasza .jpg"
+                        alt="city, kalisz, view" />
+                    <div class="label-photo">
+                        Sala koncertowa w Kaliszu, w której okazję będą mieli zaprezentować się laureaci konkursu
+                    </div>
+                </div>
 
-            </section>
+                <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
+                    <img class="img-kalisz-1 img-kalisz-2" src="slider-images/wiedeń .jpg" alt="city, kalisz, view" />
+                    <div class="label-photo width-label">
+                        Sala koncertowa w wiedeńskiej Klaviergalerie, w której okazję będą mieli zaprezentować się
+                        laureaci konkursu
+                    </div>
+                </div>
+
+                <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
+                    <img class="img-kalisz-1 img-kalisz-2" src="slider-images/wiedeń 2.jpg" alt="city, kalisz, view" />
+                    <div class="label-photo">
+                        Sala koncertowa w wiedeńskiej Klaviergalerie, w której okazję będą mieli zaprezentować się
+                        laureaci konkursu
+                    </div>
+                </div>
+
+            </div>
+            <!--
+            <div class="width-form border-competition">
+
+            </div>
+           
+            <div class="width-form">
+                <form>
+                    <p class="text-application text-competition"> Regulamin konkursu <i
+                            class="fa-solid fa-arrow-down"></i> </p>
+                    <a class="download-button" href="Rules of the Competition - PLN.docx" download>
+
+                        <p class="download-text">Pobierz regulamin konkursu</p>
+
+                    </a>
+                </form>
+            </div>
+            -->
         </section>
-        
- 
+
+
+        <!--
+        <section class="contact">
+
+            <div class="width-form">
+                <p class="text-application text-competition">Aplikacje można pobrać i wysłać na naszego maila: <spam
+                        class="bank-account-letters">
+                        calisiaarts@gmail.com</spam> <i class="fa-solid fa-arrow-down"></i>
+                </p>
+                <form>
+                    <a class="download-button" href="Application form .docx" download>
+
+                        <p class="download-text-2">Download Application</p>
+
+                    </a>
+                </form>
+            </div>
+        </section>
+
+        -->
 
         <!--/ FOOTER SECTION-->
 
         <section id="footer" class="footer-wrapper text-center">
-            <div  class="container">
+            <div class="container">
                 <div class="title text-center" data-scroll-reveal="enter from the bottom after 0.5s">
                     <div class="aligncenter">
                         <div class="socialFooter">
