--- a/o-festiwalu.html
+++ b/o-festiwalu.html
@@ -108,15 +108,15 @@
                 <div class="text-container">
                     <p class="text-application width-form">
                         We are delighted to invite you to participate in the I Kalisz Piano Festival, which will take place from October 21st to 23rd, 2024, in the beautiful concert hall of the Henryk Melcer State School of Music I and II degree in Kalisz - 
-                        <a href="https://www.google.pl/maps/place/Pa%C5%84stwowa+Szko%C5%82a+Muzyczna+I+i+II+stopnia+im.+H.+Melcera/@51.7641879,18.0907639,17z/data=!3m1!4b1!4m6!3m5!1s0x471ac598ed032b71:0xfa93c7620f6b5b64!8m2!3d51.7641879!4d18.0933388!16s%2Fg%2F1tgn3gy7?entry=ttu&g_ep=EgoyMDI0MDgyOC4wIKXMDSoASAFQAw%3D%3D" class="link-google" target="_blank">check</a>.
+                        <a href="https://www.google.pl/maps/place/Pa%C5%84stwowa+Szko%C5%82a+Muzyczna+I+i+II+stopnia+im.+H.+Melcera/@51.7641879,18.0907639,17z/data=!3m1!4b1!4m6!3m5!1s0x471ac598ed032b71:0xfa93c7620f6b5b64!8m2!3d51.7641879!4d18.0933388!16s%2Fg%2F1tgn3gy7?entry=ttu&g_ep=EgoyMDI0MDgyOC4wIKXMDSoASAFQAw%3D%3D" class="link-google link2" target="_blank">- location</a>.
                         The I Kalisz Piano Festival is a unique event where the audience will have the opportunity to listen to interpretations of works from various eras performed by renowned pianists from Austria, Poland, and Italy. Among the invited artists are also the laureates of last year's I International Henryk Melcer Piano Competition (here link), organized by the Calisia Arts Foundation.
 
                         </br> </br>
                         In addition to the concerts, the Festival will also feature a series of lectures and piano workshops 
                         for talented youth from Kalisz and the surrounding areas. These will be led by Prof. Manfred Wagner-Artzt
-                         from the University of Music and Performing Arts Vienna (mdw), as well as Prof. Zbigniew Raubo from the Karol
-                          Szymanowski Academy of Music in Katowice
-                         (link) and Dr. Łukasz Byrdy from the Ignacy Jan Paderewski Academy of Music in Poznań (link).
+                         from the University of Music and Performing Arts Vienna (mdw) <a href="https://www.wagnerartzt.com" class="link-google link2" target="_blank">(more information)</a>, as well as Prof. Zbigniew Raubo from the Karol
+                          Szymanowski Academy of Music in Katowice <a href="https://am.katowice.pl/informacje/raubo-zbigniew-368" class="link-google" target="_blank"> (more information)</a>
+                          and Dr. Łukasz Byrdy from the Ignacy Jan Paderewski Academy of Music in Poznań <a href="https://lukaszbyrdy.com" class="link-google link2" target="_blank">(more information)</a>.
 
                     </p>
                 </div>
