--- a/foto.html
+++ b/foto.html
@@ -164,7 +164,22 @@
       </a>
     </div>
   </div>
+
+  <section id="footer" class="footer-wrapper text-center">
+    <div  class="container">
+        <div class="title text-center" data-scroll-reveal="enter from the bottom after 0.5s">
+            <div class="aligncenter">
+                <div class="socialFooter">
+                    <a href="https://m.facebook.com/100084549096550/" target="_blank"><i class="fa fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/calisia_arts_foundation/" target="_blank"><i class="fa fa-instagram"></i></a>
+                </div>
+                <p><span class="footer-s-1">&copy; 2024</span><span class="footer-span"> Calisia Arts
+                        Foundation</span></p>
+            </div>
+        </div>
+  </section>
 </body>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/js/lightgallery.min.js"
   integrity="sha512-b4rL1m5b76KrUhDkj2Vf14Y0l1NtbiNXwV+SzOzLGv6Tz1roJHa70yr8RmTUswrauu2Wgb/xBJPR8v80pQYKtQ=="
   crossorigin="anonymous" referrerpolicy="no-referrer"></script>
