--- a/polish-version-calisia-web/foto.html
+++ b/polish-version-calisia-web/foto.html
@@ -17,6 +17,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Main Stylesheet CSS -->
   <link rel="stylesheet" href="foto.css">
+  <link rel="stylesheet" href="rules.css">
+  <link rel="stylesheet" href="festival.css">
   <!-- SLIDER REVOLUTION 4.x CSS SETTINGS -->
   <link rel="stylesheet" type="text/css" href="rs-plugin/css/settings.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="foto.css" media="screen" />
@@ -43,8 +45,7 @@
                         </li>
                         <li><a data-scroll href="rulespl.html" class="int-collapse-menu">Konkurs</a></li>
                         <li><a data-scroll href="festival.html" class="int-collapse-menu">Festiwal</a></li>
-                        <li class="active"><a data-scroll href="foto.html" class="int-collapse-menu">Galeria</a>
-                        </li>
+                      
                     </ul>
                     <div class="languages">
                         <a href="indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
@@ -68,8 +69,7 @@
                                 class="int-collapse-menu">Kontakt</a></li>
                         <li><a data-scroll href="rulespl.html" class="int-collapse-menu">Konkurs</a></li>
                         <li><a data-scroll href="festival.html" class="int-collapse-menu">Festiwal</a></li>
-                        <li><a data-scroll href="foto.html" class="int-collapse-menu">Galeria</a>
-                        </li>
+                      
                     </ul>
                     <div class="languages-2">
                         <a href="indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
@@ -85,7 +85,21 @@
 </header>
 
   <div class="container">
-    <h2 class="gallery-title">Fotorelacja z koncertow laureatow I Miedzynarodowego Konkursu Pianistycznego im. H. Melcera </h2>
+    <div data-aos="zoom-in" data-aos-duration="1000" class="team-h">
+      <h1 class="h1-team">Fotorelacja</h1>
+  </div>
+  <div class="main-festiwal margin-bez main3">
+      <a href="o-konkursie.html" class="card card2">
+          O konkursie 2023
+       </a>
+       <a href="wyniki.html" class="card card2">
+          Wyniki konkursu
+       </a>
+       <a href="jury.html" class="card card2">
+           Jury
+       </a>
+
+  </div>
     <div class="lightgallery">
       <a class="image" href="/slider-images/2.JPG">
         <img alt="img2" src="/slider-images/2.JPG" />
@@ -188,6 +202,8 @@
       </a>
     </div>
   </div>
+
+  
 
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/js/lightgallery.min.js"
