--- a/polish-version-calisia-web/o-konkursie.html
+++ b/polish-version-calisia-web/o-konkursie.html
@@ -96,7 +96,7 @@
             <div data-aos="zoom-in" data-aos-duration="1000" class="team-h">
                 <h1 class="h1-team">Konkurs 2023</h1>
             </div>
-            <div class="main-festiwal margin-bez">
+            <div class="main-festiwal margin-bez wynik">
                 <a href="o-konkursie.html" class="card card2">
                     O konkursie 2023
                  </a>
