--- a/festiwal24.html
+++ b/festiwal24.html
@@ -97,13 +97,13 @@
             </div>
 
             <section class="main-festiwal main2">
-                <a href="o-festiwalu.html" class="card card2">
+                <a href="o-festiwalu.html" class="card card2" data-aos="fade-up" data-aos-duration="1000">
                    About festival
                 </a>
-                <a href="program.html" class="card card2">
+                <a href="program.html" class="card card2" data-aos="fade-up" data-aos-duration="1000">
                     Program
                 </a>
-                <a href="artysci.html" class="card card2">
+                <a href="artysci.html" class="card card2" data-aos="fade-up" data-aos-duration="1000">
                     Artists
                 </a>
             </section>
