--- a/festival.html
+++ b/festival.html
@@ -101,7 +101,7 @@
 
         <section class="main-festiwal">
             <div class="kafel-main">
-                <a href="festiwal24.html" class="card">
+                <a href="festiwal24.html" class="card" data-aos="fade-up" data-aos-duration="1000">
                     Festival 2024
                 </a>
             </div>
