--- a/o-festiwalu.html
+++ b/o-festiwalu.html
@@ -95,11 +95,11 @@
             <div data-aos="zoom-in" data-aos-duration="1000" class="team-h">
                 <h1 class="h1-team">About festival</h1>
             </div>
-            <div class="main-festiwal margin-bez">
-                <a href="program.html" class="card">
+            <div  class="main-festiwal margin-bez">
+                <a href="program.html" class="card" data-aos="fade-up" data-aos-duration="1000">
                     Program
                 </a>
-                <a href="artysci.html" class="card">
+                <a href="artysci.html" class="card" data-aos="fade-up" data-aos-duration="1000">
                     Artists
                 </a>
 
@@ -135,9 +135,7 @@
 
                     </p>
                 </div>
-                <div class="width-form border-competition">
-
-                </div>
+           
                 <br><br>
 
             </div>
