--- a/program.html
+++ b/program.html
@@ -95,10 +95,10 @@
             </div>
 
             <div class="main-festiwal margin-bez">
-                <a href="o-festiwalu.html" class="card">
+                <a href="o-festiwalu.html" class="card" data-aos="fade-up" data-aos-duration="1000">
                     About festival
                 </a>
-                <a href="artysci.html" class="card">
+                <a href="artysci.html" class="card" data-aos="fade-up" data-aos-duration="1000">
                     Artists
                 </a>
 
