--- a/polish-version-calisia-web/artysci.html
+++ b/polish-version-calisia-web/artysci.html
@@ -95,10 +95,10 @@
                 <h1 class="h1-team">Artyści</h1>
             </div>
             <div class="main-festiwal margin-bez">
-                <a href="o-festiwalu.html" class="card">
+                <a href="o-festiwalu.html" class="card" data-aos="fade-up" data-aos-duration="1000">
                     O festiwalu
                 </a>
-                <a href="program.html" class="card">
+                <a href="program.html" class="card" data-aos="fade-up" data-aos-duration="1000">
                     Program
                 </a>
 
