--- a/polish-version-calisia-web/festival.html
+++ b/polish-version-calisia-web/festival.html
@@ -98,7 +98,7 @@
 
             <section class="main-festiwal">
                 <div class="kafel-main">
-                    <a href="festiwal24.html" class="card">
+                    <a href="festiwal24.html" class="card" data-aos="fade-up" data-aos-duration="1000">
                         Festiwal 2024
                     </a>
                 </div>
