--- a/polish-version-calisia-web/konkurs24.html
+++ b/polish-version-calisia-web/konkurs24.html
@@ -100,16 +100,16 @@
             </div>
 
             <section class="main-festiwal main2">
-                <a href="o-konkursie.html" class="card card2">
+                <a href="o-konkursie.html" class="card card2" data-aos="fade-up" data-aos-duration="1000">
                    O konkursie 2023
                 </a>
-                <a href="foto.html" class="card card2">
+                <a href="foto.html" class="card card2" data-aos="fade-up" data-aos-duration="1000">
                     Fotorelacja
                 </a>
-                <a href="wyniki.html" class="card card2">
+                <a href="wyniki.html" class="card card2" data-aos="fade-up" data-aos-duration="1000">
                    Wyniki konkursu
                 </a>
-                <a href="jury.html" class="card card2">
+                <a href="jury.html" class="card card2" data-aos="fade-up" data-aos-duration="1000">
                     Jury
                 </a>
             </section>
