--- a/polish-version-calisia-web/o-festiwalu.html
+++ b/polish-version-calisia-web/o-festiwalu.html
@@ -95,10 +95,10 @@
                 <h1 class="h1-team">O festiwalu</h1>
             </div>
             <div class="main-festiwal margin-bez">
-                <a href="program.html" class="card">
+                <a href="program.html" class="card" data-aos="fade-up" data-aos-duration="1000">
                     Program
                 </a>
-                <a href="artysci.html" class="card">
+                <a href="artysci.html" class="card" data-aos="fade-up" data-aos-duration="1000">
                     Artyści
                 </a>
 
@@ -129,9 +129,7 @@
 
                     </p>
                 </div>
-                <div class="width-form border-competition">
-
-                </div>
+       
                 <br><br>
 
             </div>
