--- a/chinese-version/index-chinese.html
+++ b/chinese-version/index-chinese.html
@@ -97,7 +97,7 @@
             <div class="home-content">
 
                 <img data-aos="fade-up" data-aos-duration="1000" class="img-logo-competition"
-                    src="slider-images/baner-eng.png" />
+                    src="slider-images/baner-eng2.png" />
 
                 <!--
             <div class="tp-caption rev-video2 customin customout start">
