--- a/polish-version-calisia-web/konkurs24.html
+++ b/polish-version-calisia-web/konkurs24.html
@@ -90,8 +90,8 @@
             </div>
 
         </header>
-        <section class="contact">
-            <div data-aos="zoom-in" data-aos-duration="1000" class="team-h">
+        <section class="contact konkursbox">
+            <div class="team-h">
                 <h1 class="h1-team">Konkurs 2023</h1>
             </div>
 
@@ -100,16 +100,16 @@
             </div>
 
             <section class="main-festiwal main2">
-                <a href="o-konkursie.html" class="card card2" data-aos="fade-up" data-aos-duration="1000">
+                <a href="o-konkursie.html" class="card card2">
                    O konkursie 2023
                 </a>
-                <a href="foto.html" class="card card2" data-aos="fade-up" data-aos-duration="1000">
+                <a href="foto.html" class="card card2" >
                     Fotorelacja
                 </a>
-                <a href="wyniki.html" class="card card2" data-aos="fade-up" data-aos-duration="1000">
+                <a href="wyniki.html" class="card card2">
                    Wyniki konkursu
                 </a>
-                <a href="jury.html" class="card card2" data-aos="fade-up" data-aos-duration="1000">
+                <a href="jury.html" class="card card2" >
                     Jury
                 </a>
             </section>
