--- a/polish-version-calisia-web/o-festiwalu.html
+++ b/polish-version-calisia-web/o-festiwalu.html
@@ -95,10 +95,10 @@
                 <h1 class="h1-team">O festiwalu</h1>
             </div>
             <div class="main-festiwal margin-bez">
-                <a href="program.html" class="card" data-aos="fade-up" data-aos-duration="1000">
+                <a href="program.html" class="card" >
                     Program
                 </a>
-                <a href="artysci.html" class="card" data-aos="fade-up" data-aos-duration="1000">
+                <a href="artysci.html" class="card" >
                     Artyści
                 </a>
 
