--- a/polish-version-calisia-web/o-konkursie.html
+++ b/polish-version-calisia-web/o-konkursie.html
@@ -93,7 +93,7 @@
 
         </header>
         <section class="contact">
-            <div data-aos="zoom-in" data-aos-duration="1000" class="team-h">
+            <div  class="team-h">
                 <h1 class="h1-team">Konkurs 2023</h1>
             </div>
             <div class="main-festiwal margin-bez wynik">
