--- a/polish-version-calisia-web/program.html
+++ b/polish-version-calisia-web/program.html
@@ -91,7 +91,7 @@
 
         </header>
         <section class="contact">
-            <div data-aos="zoom-in" data-aos-duration="1000" class="team-h">
+            <div class="team-h">
                 <h1 class="h1-team">Program</h1>
             </div>
 
