--- a/polish-version-calisia-web/rulespl.html
+++ b/polish-version-calisia-web/rulespl.html
@@ -101,7 +101,7 @@
 
             <section class="main-festiwal">
                 <div class="kafel-main">
-                    <a href="konkurs24.html" class="card">
+                    <a href="konkurs24.html" class="card" data-aos="zoom-in" data-aos-duration="1000">
                         Konkurs 2023
                     </a>
                 </div>
