--- a/polish-version-calisia-web/festiwal24.html
+++ b/polish-version-calisia-web/festiwal24.html
@@ -90,7 +90,7 @@
 
         </header>
         <section class="contact">
-            <div data-aos="zoom-in" data-aos-duration="1000" class="team-h">
+            <div class="team-h">
                 <h1 class="h1-team">Festiwal 2024</h1>
             </div>
             <div class="container-text-photos">
