--- a/polish-version-calisia-web/indexpl.html
+++ b/polish-version-calisia-web/indexpl.html
@@ -94,7 +94,7 @@
             <div class="home-content">
 
                 <img data-aos="fade-up" data-aos-duration="1000" class="img-logo-competition"
-                    src="slider-images/baner-pln.png" />
+                    src="slider-images/b-pl.png" />
 
                 <!--
             <div class="tp-caption rev-video2 customin customout start">
