--- a/festiwal24.html
+++ b/festiwal24.html
@@ -90,20 +90,20 @@
     
         </header>
         <section class="contact">
-            <div data-aos="zoom-in" data-aos-duration="1000" class="team-h">
+            <div class="team-h">
                 <h1 class="h1-team">Festival 2024</h1>
             </div>
             <div class="container-text-photos">
             </div>
 
             <section class="main-festiwal main2">
-                <a href="o-festiwalu.html" class="card card2" data-aos="fade-up" data-aos-duration="1000">
+                <a href="o-festiwalu.html" class="card card2">
                    About festival
                 </a>
-                <a href="program.html" class="card card2" data-aos="fade-up" data-aos-duration="1000">
+                <a href="program.html" class="card card2">
                     Program
                 </a>
-                <a href="artysci.html" class="card card2" data-aos="fade-up" data-aos-duration="1000">
+                <a href="artysci.html" class="card card2">
                     Artists
                 </a>
             </section>
