--- a/artysci.html
+++ b/artysci.html
@@ -91,14 +91,14 @@
 
         </header>
         <section class="contact">
-            <div data-aos="zoom-in" data-aos-duration="1000" class="team-h">
+            <div class="team-h">
                 <h1 class="h1-team">Artyści</h1>
             </div>
             <div class="main-festiwal margin-bez">
-                <a href="o-festiwalu.html" class="card" data-aos="fade-up" data-aos-duration="1000" >
+                <a href="o-festiwalu.html" class="card" >
                     O festiwalu
                 </a>
-                <a href="program.html" class="card" data-aos="fade-up" data-aos-duration="1000">
+                <a href="program.html" class="card" >
                     Program
                 </a>
 
