--- a/polish-version-calisia-web/program.html
+++ b/polish-version-calisia-web/program.html
@@ -96,10 +96,10 @@
             </div>
 
             <div class="main-festiwal margin-bez">
-                <a href="o-festiwalu.html" class="card" data-aos="fade-up" data-aos-duration="1000">
+                <a href="o-festiwalu.html" class="card">
                     O festiwalu
                 </a>
-                <a href="artysci.html" class="card" data-aos="fade-up" data-aos-duration="1000">
+                <a href="artysci.html" class="card">
                     Artyści
                 </a>
 
