--- a/program.html
+++ b/program.html
@@ -90,15 +90,15 @@
     
         </header>
         <section class="contact">
-            <div data-aos="zoom-in" data-aos-duration="1000" class="team-h">
+            <div class="team-h">
                 <h1 class="h1-team">Program</h1>
             </div>
 
             <div class="main-festiwal margin-bez">
-                <a href="o-festiwalu.html" class="card" data-aos="fade-up" data-aos-duration="1000">
+                <a href="o-festiwalu.html" class="card">
                     About festival
                 </a>
-                <a href="artysci.html" class="card" data-aos="fade-up" data-aos-duration="1000">
+                <a href="artysci.html" class="card">
                     Artists
                 </a>
 
