--- a/o-festiwalu.html
+++ b/o-festiwalu.html
@@ -92,14 +92,14 @@
 
         </header>
         <section class="contact">
-            <div data-aos="zoom-in" data-aos-duration="1000" class="team-h">
+            <div class="team-h">
                 <h1 class="h1-team">About festival</h1>
             </div>
             <div  class="main-festiwal margin-bez">
-                <a href="program.html" class="card" data-aos="fade-up" data-aos-duration="1000">
+                <a href="program.html" class="card" >
                     Program
                 </a>
-                <a href="artysci.html" class="card" data-aos="fade-up" data-aos-duration="1000">
+                <a href="artysci.html" class="card" >
                     Artists
                 </a>
 
