--- a/polish-version-calisia-web/o-konkursie.html
+++ b/polish-version-calisia-web/o-konkursie.html
@@ -93,35 +93,34 @@
 
         </header>
         <section class="contact">
-            <div  class="team-h">
+            <div class="team-h">
                 <h1 class="h1-team">Konkurs 2023</h1>
             </div>
             <div class="main-festiwal margin-bez wynik">
                 <a href="o-konkursie.html" class="card card2">
                     O konkursie 2023
-                 </a>
-                 <a href="foto.html" class="card card2">
-                     Fotorelacja
-                 </a>
-                 <a href="wyniki.html" class="card card2">
+                </a>
+                <a href="foto.html" class="card card2">
+                    Fotorelacja
+                </a>
+                <a href="wyniki.html" class="card card2">
                     Wyniki konkursu
-                 </a>
-                 <a href="jury.html" class="card card2">
-                     Jury
-                 </a>
+                </a>
+                <a href="jury.html" class="card card2">
+                    Jury
+                </a>
 
             </div>
             <div class="container-text-photos">
                 <div class="text-container">
                     <p class="text-application width-form">
-                        I Międzynarodowy Konkurs Pianistyczny im. Henryka Melcera ma na celu odkrywanie i
-                        promowanie utalentowanych pianistów z całego świata.
-                        Patronem konkursu jest związany z Kaliszem wybitny kompozytor i pianista Henryk Melcer, który
-                        po śmierci popadł w zapomnienie i nie jest obecnie znany szerszemu gronu melomanów.
-                        Laureaci konkursu wystąpią w salach koncertowych w Polsce i Austrii, a wybrani uczestnicy będą
-                        mieli szansę wzięcia udziału w kursach mistrzowskich organizowanych przez Fundację Calisia
-                        Arts, które zostaną poprowadzone przez uznanych pianistów i pedagogów.
-                        Oprócz występów na koncertach finałowych dla laureatów przewidziane są nagrody pieniężne.
+                        I Międzynarodowy Konkurs Pianistyczny im. Henryka Melcera
+                        Zorganizowany przez Fundację Calisia Arts I Międzynarodowy Konkurs Pianistyczny im. Henryka
+                        Melcera przyciągnął 77 pianistów i pianistek z kilkunastu krajów na całym świecie. Konkurs miał
+                        na celu odkrywanie i promocję talentów, przypominając jednocześnie postać Henryka Melcera-
+                        wybitnego pianisty i kompozytora przez wiele lat związanego z Kaliszem.
+                        Laureaci konkursu wystąpili w prestiżowych salach koncertowych oraz uczestniczyli w kursach
+                        mistrzowskich prowadzonych przez przewodniczącego jury Łukasza Byrdy.
                     </p>
                 </div>
                 <div class="width-form border-competition">
@@ -131,33 +130,44 @@
             </div>
             <div class="container-photo">
                 <div data-aos="fade-right" data-aos-duration="1000" class="image-about-1">
-                    <img class="img-kalisz-1 img-kalisz-2" src="slider-images/lukasz prowadzi kursy.jpg"
-                        alt="city, kalisz, view" />
+                    <img class="img-kalisz-1 img-kalisz-2" src="slider-images/1-6.jpg" alt="city, kalisz, view" />
                     <div class="label-photo">
-                        Kursy mistrzowskie w Kanadzie prowadzone przez przewodniczącego Jury Łukasza Byrdy
+                        Koncert laureatów w wiedeńskiej Klaviergalerie, laureaci konkursu
                     </div>
                 </div>
                 <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
-                    <img class="img-kalisz-1 img-kalisz-2" src="slider-images/PSM Kalisz recital Lukasza .jpg"
-                        alt="city, kalisz, view" />
+                    <img class="img-kalisz-1 img-kalisz-2" src="slider-images/2-6.JPG" alt="city, kalisz, view" />
                     <div class="label-photo">
-                        Sala koncertowa w Kaliszu, w której okazję będą mieli zaprezentować się laureaci konkursu
+                        Koncert laureatów w PSM I i II st. im. H. Melcera w Kaliszu, Yukino Hayashi - I nagroda,
+                        Kategoria E
                     </div>
                 </div>
 
                 <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
-                    <img class="img-kalisz-1 img-kalisz-2" src="slider-images/wiedeń .jpg" alt="city, kalisz, view" />
+                    <img class="img-kalisz-1 img-kalisz-2" src="slider-images/3-6.jpg" alt="konkurs" />
                     <div class="label-photo width-label">
-                        Sala koncertowa w wiedeńskiej Klaviergalerie, w której okazję będą mieli zaprezentować się
-                        laureaci konkursu
+                        Koncert laureatów w kompleksie Calisia One, Kamila Kloc - II nagroda, Kategoria A
                     </div>
                 </div>
 
                 <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
-                    <img class="img-kalisz-1 img-kalisz-2" src="slider-images/wiedeń 2.jpg" alt="city, kalisz, view" />
+                    <img class="img-kalisz-1 img-kalisz-2" src="slider-images/4-6.jpg" alt="konkurs" />
                     <div class="label-photo">
-                        Sala koncertowa w wiedeńskiej Klaviergalerie, w której okazję będą mieli zaprezentować się
-                        laureaci konkursu
+                        Kursy pianistyczne z Dr. Łukaszem Byrdy
+                    </div>
+                </div>
+
+                <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
+                    <img class="img-kalisz-1 img-kalisz-2" src="slider-images/5-6.jpg" alt="konkurs" />
+                    <div class="label-photo">
+                        Koncert laureatów w kompleksie Calisia One, laureaci konkursu - Stefano Brizzi i Maciej Domagała
+                    </div>
+                </div>
+
+                <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
+                    <img class="img-kalisz-1 img-kalisz-2" src="slider-images/6-6.jpg" alt="city, kalisz, view" />
+                    <div class="label-photo">
+                        Koncert laureatów w wiedeńskiej Klaviergalerie, prezes Fundacji Calisia Arts - Filip Pinczewski
                     </div>
                 </div>
 
