--- a/polish-version-calisia-web/o-konkursie.html
+++ b/polish-version-calisia-web/o-konkursie.html
@@ -151,7 +151,7 @@
                 </div>
 
                 <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
-                    <img class="img-kalisz-1 img-kalisz-2" src="slider-images/4-6.jpg" alt="konkurs" />
+                    <img class="img-kalisz-1 img-kalisz-2" src="slider-images/kursy.jpg" alt="konkurs" />
                     <div class="label-photo">
                         Kursy pianistyczne z Dr. Łukaszem Byrdy
                     </div>
