--- a/polish-version-calisia-web/jury.html
+++ b/polish-version-calisia-web/jury.html
@@ -80,7 +80,7 @@
     <body>
         <div class="team-container">
             <div class="jury-box">
-                <div data-aos="zoom-in" data-aos-duration="1000" class="team-h">
+                <div class="team-h">
                     <h1 class="h1-team">Jury</h1>
                 </div>
 
@@ -423,8 +423,8 @@ Gianluca Faragli graduated in piano with honors, honors and honorable mention at
 
         <!--/ FOOTER SECTION-->
         <section id="footer" class="footer-wrapper text-center">
-            <div data-aos="zoom-in" data-aos-duration="1000" class="container">
-                <div class="title text-center" data-scroll-reveal="enter from the bottom after 0.5s">
+            <div class="container">
+                <div class="title text-center" >
                     <div class="aligncenter">
                         <div class="socialFooter">
                             <a href="https://m.facebook.com/100084549096550/" target="_blank"><i class="fa fa-facebook"></i></a>
