--- a/polish-version-calisia-web/foto.html
+++ b/polish-version-calisia-web/foto.html
@@ -85,7 +85,7 @@
 </header>
 
   <div class="container">
-    <div data-aos="zoom-in" data-aos-duration="1000" class="team-h">
+    <div class="team-h">
       <h1 class="h1-team">Fotorelacja</h1>
   </div>
   <div class="main-festiwal margin-bez main3">
@@ -202,7 +202,21 @@
       </a>
     </div>
   </div>
-
+  <section id="footer" class="footer-wrapper text-center">
+    <div class="container">
+        <div class="title text-center" data-scroll-reveal="enter from the bottom after 0.5s">
+            <div class="aligncenter">
+                <div class="socialFooter">
+                    <a href="https://m.facebook.com/100084549096550/" target="_blank"><i
+                            class="fa fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/calisia_arts_foundation/" target="_blank"><i
+                            class="fa fa-instagram"></i></a>
+                </div>
+                <p><span class="footer-s-1">&copy; 2024</span><span class="footer-span"> Calisia Arts
+                        Foundation</span></p>
+            </div>
+        </div>
+</section>
   
 
 </body>
