--- a/foto.html
+++ b/foto.html
@@ -41,11 +41,9 @@
               <li><a data-scroll href="team.html" class="int-collapse-menu">Team</a></li>
               <li><a data-scroll href="contact.html" class="int-collapse-menu">Contact</a>
               </li>
-              <li><a data-scroll href="rules.html" class="int-collapse-menu">Competition</a></li>
+              <li class="active"><a data-scroll href="rules.html" class="int-collapse-menu">Competition</a></li>
               <li><a data-scroll href="festival.html" class="int-collapse-menu">Festival</a></li>
-              <li class="active"><a data-scroll href="foto.html" class="int-collapse-menu">Gallery</a>
-              </li>
-
+         
             </ul>
             <div class="languages">
               <a href="polish-version-calisia-web/indexpl.html"><img class="img-flag"
@@ -69,7 +67,7 @@
               <li class="li-hamburger"><a data-scroll href="contact.html" class="int-collapse-menu">Contact</a></li>
               <li><a data-scroll href="rules.html" class="int-collapse-menu">Competition</a></li>
               <li><a data-scroll href="festival.html" class="int-collapse-menu">Festival</a></li>
-              <li><a data-scroll href="foto.html" class="int-collapse-menu">Gallery</a></li>
+       
             </ul>
             <div class="languages-2">
               <a href="polish-version-calisia-web/indexpl.html"><img class="img-flag"
@@ -87,6 +85,21 @@
   </header>
 
   <div class="container">
+
+    <div class="team-h">
+      <h1 class="h1-team">Photo gallery</h1>
+  </div>
+  <div class="main-festiwal margin-bez main3">
+      <a href="o-konkursie.html" class="card card2">
+          About competition 2023
+       </a>
+       <a href="wyniki.html" class="card card2">
+          Results
+       </a>
+       <a href="jury.html" class="card card2">
+           Jury
+       </a>
+
     <h2 class="gallery-title">Photo gallery from the Concerts of the winners of the 1st Henryk Melcer International
       Piano Competition</h2>
 
