--- a/wyniki.html
+++ b/wyniki.html
@@ -89,7 +89,7 @@
             <h1 class="h1-team">Results</h1>
         </div>
         <div class="main-festiwal margin-bez">
-            <a href="o-konkursie.html" class="card card2">
+            <a href="rules.html" class="card card2">
                 About competition 2023
             </a>
             <a href="foto.html" class="card card2">
