--- a/artysci.html
+++ b/artysci.html
@@ -41,7 +41,7 @@
                                 <li><a data-scroll href="team-pl.html" class="int-collapse-menu">Zespół</a></li>
                                 <li><a data-scroll href="contact-pl.html" class="int-collapse-menu">Kontakt</a>
                                 </li>
-                                <li><a data-scroll href="rulespl.html" class="int-collapse-menu">Konkurs</a></li>
+                                <li><a data-scroll href="konkurs24.html" class="int-collapse-menu">Konkurs</a></li>
                                 <li class="active"><a data-scroll href="festival.html"
                                         class="int-collapse-menu">Festiwal</a></li>
 
@@ -71,7 +71,7 @@
                                 </li>
                                 <li class="li-hamburger"><a data-scroll href="contact-pl.html"
                                         class="int-collapse-menu">Kontakt</a></li>
-                                <li><a data-scroll href="rulespl.html" class="int-collapse-menu">Konkurs</a></li>
+                                <li><a data-scroll href="konkurs24.html" class="int-collapse-menu">Konkurs</a></li>
                                 <li><a data-scroll href="festival.html" class="int-collapse-menu">Festiwal</a></li>
 
                             </ul>
