--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
                             <li ><a data-scroll href="team.html" class="int-collapse-menu">Team</a></li>
                             <li class="active"><a data-scroll href="contact.html" class="int-collapse-menu">Contact</a>
                             </li>
-                            <li><a data-scroll href="rules.html" class="int-collapse-menu">Competition</a></li>
+                            <li><a data-scroll href="konkurs24.html" class="int-collapse-menu">Competition</a></li>
                             <li><a data-scroll href="festival.html" class="int-collapse-menu">Festival</a></li>
                
                         </ul>
@@ -66,7 +66,7 @@
                             </li>
                             <li class="li-hamburger"><a data-scroll href="contact.html"
                                     class="int-collapse-menu">Contact</a></li>
-                            <li><a data-scroll href="rules.html" class="int-collapse-menu">Competition</a></li>
+                            <li><a data-scroll href="konkurs24.html" class="int-collapse-menu">Competition</a></li>
                             <li><a data-scroll href="festival.html" class="int-collapse-menu">Festival</a></li>
                          
                         </ul>
