--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <li><a data-scroll href="team.html" class="int-collapse-menu">Team</a></li>
                             <li><a data-scroll href="contact.html" class="int-collapse-menu">Contact</a>
                             </li>
-                            <li><a data-scroll href="rules.html" class="int-collapse-menu">Competition</a></li>
+                            <li><a data-scroll href="konkurs24.html" class="int-collapse-menu">Competition</a></li>
                             <li><a data-scroll href="festival.html" class="int-collapse-menu">Festival</a></li>
                            
 
@@ -67,7 +67,7 @@
                             </li>
                             <li class="li-hamburger"><a data-scroll href="contact.html"
                                     class="int-collapse-menu">Contact</a></li>
-                            <li><a data-scroll href="rules.html" class="int-collapse-menu">Competition</a></li>
+                            <li><a data-scroll href="konkurs24.html" class="int-collapse-menu">Competition</a></li>
                             <li><a data-scroll href="festival.html" class="int-collapse-menu">Festival</a></li>
                    
                         </ul>
