--- a/o-festiwalu.html
+++ b/o-festiwalu.html
@@ -41,7 +41,7 @@
                                 <li><a data-scroll href="team.html" class="int-collapse-menu">Team</a></li>
                                 <li><a data-scroll href="contact.html" class="int-collapse-menu">Contact</a>
                                 </li>
-                                <li><a data-scroll href="rules.html" class="int-collapse-menu">Competition</a></li>
+                                <li><a data-scroll href="konkurs24.html" class="int-collapse-menu">Competition</a></li>
                                 <li class="active"><a data-scroll href="festival.html"
                                         class="int-collapse-menu">Festival</a></li>
                                 </li>
@@ -72,7 +72,7 @@
                                 </li>
                                 <li class="li-hamburger"><a data-scroll href="contact.html"
                                         class="int-collapse-menu">Contact</a></li>
-                                <li><a data-scroll href="rules.html" class="int-collapse-menu">Competition</a></li>
+                                <li><a data-scroll href="konkurs24.html" class="int-collapse-menu">Competition</a></li>
                                 <li><a data-scroll href="festival.html" class="int-collapse-menu">Festival</a></li>
 
                             </ul>
