--- a/polish-version-calisia-web/o-konkursie.html
+++ b/polish-version-calisia-web/o-konkursie.html
@@ -72,10 +72,10 @@
                                 </li>
                                 <li class="li-hamburger"><a data-scroll href="contact-pl.html"
                                         class="int-collapse-menu">Kontakt</a></li>
-                                <li><a data-scroll href="rulespl.html" class="int-collapse-menu">Konkurs</a></li>
+                                <li class="active"><a data-scroll href="rulespl.html" class="int-collapse-menu">Konkurs</a></li>
                                 <li><a data-scroll href="festival.html" class="int-collapse-menu">Festiwal</a></li>
-                                <li class="active"><a data-scroll href="foto.html" class="int-collapse-menu">Galeria</a>
-                                </li>
+                
+
                             </ul>
                             <div class="languages-2">
                                 <a href="indexpl.html"><img class="img-flag"
