--- a/artysci.html
+++ b/artysci.html
@@ -32,26 +32,27 @@
                 <div class="container">
                     <div class="navbar navbar-default" role="navigation">
                         <div class="navbar-collapse">
-                            <a href="indexpl.html"><img class="logo-calisia" src="slider-images/calisia-format.png"
+                            <a href="index.html"><img class="logo-calisia" src="slider-images/calisia-format.png"
                                     alt="logo, gold letters, calisia arts" /></a>
                             <ul class="nav navbar-nav">
-                                <li><a data-scroll href="indexpl.html" class="int-collapse-menu">Home</a></li>
-                                <li><a data-scroll href="about-pl.html" class="int-collapse-menu">O Kaliszu</a>
+                                <li><a data-scroll href="index.html" class="int-collapse-menu">Home</a></li>
+                                <li><a data-scroll href="about.html" class="int-collapse-menu">About</a>
                                 </li>
-                                <li><a data-scroll href="team-pl.html" class="int-collapse-menu">Zespół</a></li>
-                                <li><a data-scroll href="contact-pl.html" class="int-collapse-menu">Kontakt</a>
+                                <li><a data-scroll href="team.html" class="int-collapse-menu">Team</a></li>
+                                <li><a data-scroll href="contact.html" class="int-collapse-menu">Contact</a>
                                 </li>
-                                <li><a data-scroll href="konkurs24.html" class="int-collapse-menu">Konkurs</a></li>
+                                <li><a data-scroll href="konkurs24.html" class="int-collapse-menu">Competition</a></li>
                                 <li class="active"><a data-scroll href="festival.html"
-                                        class="int-collapse-menu">Festiwal</a></li>
+                                        class="int-collapse-menu">Festival</a></li>
+                                </li>
 
                             </ul>
                             <div class="languages">
-                                <a href="indexpl.html"><img class="img-flag"
+                                <a href="polish-version-calisia-web/indexpl.html"><img class="img-flag"
                                         src="slider-images/icons8-poland-48.png" /></a>
-                                <a href="../index.html"><img class="img-flag"
+                                <a href="index.html"><img class="img-flag"
                                         src="slider-images/icons8-great-britain-48.png" /></a>
-                                <a href="../chinese-version/index-chinese.html"><img class="img-flag"
+                                <a href="chinese-version/index-chinese.html"><img class="img-flag"
                                         src="slider-images/icons8-china-48.png" /></a>
                             </div>
                             <button class="hamburger">
@@ -60,27 +61,27 @@
                         </div>
                         <div class="hamburger-list-div">
                             <ul class="hamburger-list">
-                                <li class="li-hamburger"><a data-scroll href="indexpl.html"
+                                <li class="li-hamburger"><a data-scroll href="index.html"
                                         class="int-collapse-menu">Home</a>
                                 </li>
-                                <li class="li-hamburger"><a data-scroll href="about-pl.html" class="int-collapse-menu">O
-                                        Kaliszu</a>
+                                <li class="li-hamburger"><a data-scroll href="about.html"
+                                        class="int-collapse-menu">About</a>
                                 </li>
-                                <li class="li-hamburger"><a data-scroll href="team-pl.html"
-                                        class="int-collapse-menu">Zespół</a>
+                                <li class="li-hamburger"><a data-scroll href="team.html"
+                                        class="int-collapse-menu">Team</a>
                                 </li>
-                                <li class="li-hamburger"><a data-scroll href="contact-pl.html"
-                                        class="int-collapse-menu">Kontakt</a></li>
-                                <li><a data-scroll href="konkurs24.html" class="int-collapse-menu">Konkurs</a></li>
-                                <li><a data-scroll href="festival.html" class="int-collapse-menu">Festiwal</a></li>
+                                <li class="li-hamburger"><a data-scroll href="contact.html"
+                                        class="int-collapse-menu">Contact</a></li>
+                                <li><a data-scroll href="konkurs24.html" class="int-collapse-menu">Competition</a></li>
+                                <li><a data-scroll href="festival.html" class="int-collapse-menu">Festival</a></li>
 
                             </ul>
                             <div class="languages-2">
-                                <a href="indexpl.html"><img class="img-flag"
+                                <a href="polish-version-calisia-web/indexpl.html"><img class="img-flag"
                                         src="slider-images/icons8-poland-48.png" /></a>
-                                <a href="../index.html"><img class="img-flag"
+                                <a href="index.html"><img class="img-flag"
                                         src="slider-images/icons8-great-britain-48.png" /></a>
-                                <a href="../chinese-version/index-chinese.html"><img class="img-flag"
+                                <a href="chinese-version/index-chinese.html"><img class="img-flag"
                                         src="slider-images/icons8-china-48.png" /></a>
                             </div>
 
@@ -92,11 +93,11 @@
         </header>
         <section class="contact">
             <div class="team-h">
-                <h1 class="h1-team">Artyści</h1>
+                <h1 class="h1-team">Artists</h1>
             </div>
             <div class="main-festiwal margin-bez">
                 <a href="o-festiwalu.html" class="card" >
-                    O festiwalu
+                    About festival
                 </a>
                 <a href="program.html" class="card" >
                     Program
