--- a/polish-version-calisia-web/o-konkursie.html
+++ b/polish-version-calisia-web/o-konkursie.html
@@ -111,7 +111,7 @@
                 </a>
 
             </div>
-            <div class="container-text-photos">
+            <div class="container-text-photos container-text-photos2">
                 <div class="text-container">
                     <p class="text-application width-form">
                         I Międzynarodowy Konkurs Pianistyczny im. Henryka Melcera
