--- a/rules.html
+++ b/rules.html
@@ -109,7 +109,7 @@
             </a>
 
         </div>
-        <div class="container-text-photos">
+        <div class="container-text-photos container-text-photos2">
             <div class="text-container">
                 <p class="text-application width-form">
                     1st International Henryk Melcer Piano Competition
